algunas casillas terminadas

--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <canvas id="canvas" width="700" height="700">
+    <div class="dado1">
+        <img class="img1" src="images/1.png" alt="dado_valor1">
+    </div>
+
+    <div class="dado2">
+        <img class="img2" src="images/1.png" alt="dado_valor1">
+    </div>
+
+    <canvas id="canvas" color="black">
 
     </canvas>
     <script src="scripts/celdas.js"></script>
+    <script src="scripts/dados.js"></script>
     <script src="scripts/main.js"></script>
 </body>
 
